User Editing, Transactions, DTOs Finished
