# client/swagger.json
@@ -43,6 +43,29 @@
         }
       }
     },
+    "/Board/GetBoards": {
+      "get": {
+        "tags": [
+          "Board"
+        ],
+        "operationId": "Board_GetAllBoards",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/BoardResponseDTO"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/Game/NewGame": {
       "post": {
         "tags": [
@@ -282,12 +305,44 @@
         }
       }
     },
-    "/User/@me": {
+    "/User/@user": {
       "get": {
         "tags": [
           "User"
         ],
         "operationId": "User_GGetUser",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthorizedUserResponseDTO"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/User/@user/update": {
+      "patch": {
+        "tags": [
+          "User"
+        ],
+        "operationId": "User_PUpdateUser",
+        "requestBody": {
+          "x-name": "data",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserUpdateRequestDTO"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
         "responses": {
           "200": {
             "description": "",
@@ -598,6 +653,34 @@
             "type": "string",
             "maxLength": 32,
             "minLength": 5
+          }
+        }
+      },
+      "UserUpdateRequestDTO": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "email": {
+            "type": "string",
+            "format": "email",
+            "nullable": true
+          },
+          "phoneNumber": {
+            "type": "string",
+            "format": "phone",
+            "maxLength": 8,
+            "minLength": 8,
+            "nullable": true
+          },
+          "password": {
+            "type": "string",
+            "maxLength": 32,
+            "minLength": 5,
+            "nullable": true
           }
         }
       }
