# server/Service/Services/Interfaces/IUserService.cs
@@ -12,4 +12,6 @@ public interface IUserService
     public AuthorizedUserResponseDTO EnrollUser(Guid userId, UserEnrollmentRequestDTO newPassword);
 
     public void NewAdmin(User newUser);
+    
+    public AuthorizedUserResponseDTO UpdateUser(Guid userId, UserUpdateRequestDTO userUpdateRequest);
 }
